@@ -1838,11 +1838,11 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkLabel" id="label170">
+		<widget class="GtkLabel" id="attrGlobal">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;b&gt;Attributes&lt;/b&gt;</property>
+		  <property name="label" translatable="yes">Attributes</property>
 		  <property name="use_underline">False</property>
-		  <property name="use_markup">True</property>
+		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_CENTER</property>
 		  <property name="wrap">False</property>
 		  <property name="selectable">False</property>
@@ -1889,11 +1889,11 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkLabel" id="label171">
+		<widget class="GtkLabel" id="notesGlobal">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;b&gt;Notes&lt;/b&gt;</property>
+		  <property name="label" translatable="yes">Notes</property>
 		  <property name="use_underline">False</property>
-		  <property name="use_markup">True</property>
+		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_CENTER</property>
 		  <property name="wrap">False</property>
 		  <property name="selectable">False</property>
@@ -1933,11 +1933,11 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkLabel" id="label174">
+		<widget class="GtkLabel" id="refsGlobal">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;b&gt;References&lt;/b&gt;</property>
+		  <property name="label" translatable="yes">References</property>
 		  <property name="use_underline">False</property>
-		  <property name="use_markup">True</property>
+		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_CENTER</property>
 		  <property name="wrap">False</property>
 		  <property name="selectable">False</property>
